--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1 user-scalable=no" />
-    <title>AngularJS: Tuning the engine</title>
+    <title>Angular 2</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.3.0/themes/prism-tomorrow.css">
+    <style>
+    body {
+      font-family: 'Open Sans' !important;
+    }
+    </style>
   </head>
   <body>
     <div id="root"></div>
